--- a/stylesheets/aleksi/lists/_sort.scss
+++ b/stylesheets/aleksi/lists/_sort.scss
@@ -39,12 +39,20 @@
   {
     // compare items with the one in the midddle
     $seed: nth($list, ceil($length / 2));
+    $seed-is-nr: type-of($seed);
 
     @each $item in $list
     {
       // recognize equal items
       @if $item == $seed {
         $equal: append($equal, $item);
+      }
+
+      // compare numbers
+      @else if $seed-is-nr and type-of($item) == 'number'
+      {
+        @if $item < $seed { $less: append($less, $item, $sep); }
+        @else if $item > $seed { $more: append($more, $item, $sep); }
       }
 
       // recognize string items coming before in the order
