--- a/test/tests/_aleksi.scss
+++ b/test/tests/_aleksi.scss
@@ -48,7 +48,7 @@
 @import "tests/aleksi/lists/every";
 @import "tests/aleksi/lists/some";
 
-// MAPS
+// // MAPS
 @import "tests/aleksi/maps/is-map";
 
 @import "tests/aleksi/maps/map-merge-deep";
