--- a/stylesheets/aleksi/lists/_filter.scss
+++ b/stylesheets/aleksi/lists/_filter.scss
@@ -7,6 +7,7 @@
 
 @import "aleksi/general/throw";
 @import "aleksi/cast/to-list";
+@import "aleksi/arglists/arglist-prepend";
 @import "aleksi/lists/is-list";
 @import "aleksi/lists/set-list-separator";
 @import "aleksi/maps/map-filter-values";
@@ -83,7 +84,7 @@
 @function list-filter( $list, $test, $args... )
 {
   @if not is-list($list) {
-    $e: throw-error("list-filter():: $list must be a list, was #{inspect($list)}.");
+    $e: throw-error("list-filter():: `$list` must be a list – was `#{inspect($list)}`");
   }
 
   // initialise empty list
@@ -92,7 +93,8 @@
 
   @each $item in $list
   {
-    @if call($test, $item, $args...) {
+    $test-args: arglist-prepend($args, $item);
+    @if call($test, $test-args...) {
       $res: append($res, $item, $separator);
     }
   }
