--- a/stylesheets/aleksi/lists/_sort.scss
+++ b/stylesheets/aleksi/lists/_sort.scss
@@ -51,8 +51,12 @@
       // compare numbers
       @else if $seed-is-nr and type-of($item) == 'number'
       {
-        @if $item < $seed { $less: append($less, $item, $sep); }
-        @else if $item > $seed { $more: append($more, $item, $sep); }
+        // compare numbers as strings, but use the number value in sorted result
+        @if str-compare('#{$item}', '#{$seed}', $order) {
+          $less: append($less, $item, $sep);
+        } @else if not str-compare('#{$item}', '#{$seed}', $order) {
+          $more: append($more, $item, $sep);
+        }
       }
 
       // recognize string items coming before in the order
