--- a/stylesheets/aleksi/maps/_map-filter-keys.scss
+++ b/stylesheets/aleksi/maps/_map-filter-keys.scss
@@ -6,6 +6,7 @@
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "aleksi/general/throw";
+@import "aleksi/arglists/arglist-prepend";
 @import "aleksi/maps/is-map";
 
 // =map-filter-keys( $map, $test, $args... )
@@ -35,8 +36,10 @@
 
   $res: ();
 
-  @each $key, $val in $map {
-    @if call($test, $key, $args...) {
+  @each $key, $val in $map
+  {
+    $test-args: arglist-prepend($args, $key);
+    @if call($test, $test-args...) {
       $res: map-merge($res, ($key: $val));
     }
   }
