--- a/stylesheets/aleksi/maps/_map-walk-keys.scss
+++ b/stylesheets/aleksi/maps/_map-walk-keys.scss
@@ -6,6 +6,7 @@
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "aleksi/general/throw";
+@import "aleksi/arglists/arglist-prepend";
 @import "aleksi/maps/is-map";
 
 // =map-walk-keys( $map, $func[, $args... ])
@@ -37,7 +38,8 @@
 
   @each $key, $val in $map
   {
-    $key: call($func, $key, $args...);
+    $call-args: arglist-prepend($args, $key);
+    $key: call($func, $call-args...);
     $res: map-merge($res, ($key: $val));
   }
 
