--- a/stylesheets/aleksi/maps/_map-walk-values.scss
+++ b/stylesheets/aleksi/maps/_map-walk-values.scss
@@ -6,6 +6,7 @@
 //// @author [Yoannis Jamar](http://yoannis.me)
 
 @import "aleksi/general/throw";
+@import "aleksi/arglists/arglist-prepend";
 @import "aleksi/maps/is-map";
 
 // =map-walk-values( $map, $func[, $args... ])
@@ -35,8 +36,10 @@
 
   $res: ();
 
-  @each $key, $val in $map {
-    $val: call($func, $val, $args...);
+  @each $key, $val in $map
+  {
+    $call-args: arglist-prepend($args, $val);
+    $val: call($func, $call-args...);
     $res: map-merge($res, ($key: $val));
   }
 
