--- a/test/tests/aleksi/lists/_prepend.scss
+++ b/test/tests/aleksi/lists/_prepend.scss
@@ -13,7 +13,7 @@
     @include assert-equal( prepend($num-list, $str-list), append($str-list, $num-list) );
     @include assert-equal( length(prepend($num-list, $str-list)), length(append($str-list, $num-list)) );
 
-    @include assert-equal( prepend($num-list, $str-map), append($str-map, $num-list) );
-    @include assert-equal( length(prepend($num-list, $str-map)), length(append($str-map, $num-list)) );
+    @include assert-equal( prepend($num-list, $str-map), append($str-map, $num-list, list-separator($str-map)) );
+    @include assert-equal( length(prepend($num-list, $str-map)), length(append($str-map, $num-list, list-separator($str-list))) );
   }
 }
