implement ‘unique-id-for()’

--- a/stylesheets/aleksi/_general.scss
+++ b/stylesheets/aleksi/_general.scss
@@ -7,5 +7,6 @@
 @import "aleksi/general/throw";
 @import "aleksi/general/is-of-type";
 @import "aleksi/general/default-to";
+@import "aleksi/general/unique-id-for";
 @import "aleksi/general/apply";
 @import "aleksi/general/css-rule";
