implement ‘str-append()’ and ‘str-prepend()’ functions

--- a/stylesheets/aleksi/_strings.scss
+++ b/stylesheets/aleksi/_strings.scss
@@ -9,3 +9,5 @@
 @import "aleksi/strings/str-replace";
 @import "aleksi/strings/str-remove";
 @import "aleksi/strings/str-explode";
+@import "aleksi/strings/str-prepend";
+@import "aleksi/strings/str-append";
