implement test functions `is-equal` + `is-greater` + `is-littler`

--- a/stylesheets/_aleksi.scss
+++ b/stylesheets/_aleksi.scss
@@ -12,6 +12,7 @@
 // PARTIALS
 @import "aleksi/const";
 @import "aleksi/general";
+@import "aleksi/test";
 @import "aleksi/cast";
 @import "aleksi/math";
 @import "aleksi/lengths";
