implement `contains` function to check if list contains given value

--- a/stylesheets/aleksi/_lists.scss
+++ b/stylesheets/aleksi/_lists.scss
@@ -12,6 +12,7 @@
 @import "aleksi/lists/next";
 @import "aleksi/lists/previous";
 @import "aleksi/lists/get-nth";
+@import "aleksi/lists/contains";
 @import "aleksi/lists/contained-in";
 @import "aleksi/lists/depth";
 @import "aleksi/lists/every";
