--- a/stylesheets/aleksi/general/_css-rule.scss
+++ b/stylesheets/aleksi/general/_css-rule.scss
@@ -42,8 +42,15 @@
   }
 
   // optionally apply a given funtion to modify the value
-  $call-args: arglist-prepend($args, $value);
-  $value: if($func != '__none__', call($func, $call-args...), $value);
+  @if $func != '__none__'
+  {
+      @if type-of($func) == 'string' {
+        $func: get-function($func);
+      }
+
+      $call-args: arglist-prepend($args, $value);
+      $value: call($func, $call-args...);
+  }
 
   // don't append the '!important' flag to `null` because that will make SASS
   // output it in the final CSS, when `null` alone will be left out.
