--- a/stylesheets/aleksi/sides/_to-sides-list.scss
+++ b/stylesheets/aleksi/sides/_to-sides-list.scss
@@ -2,12 +2,12 @@
 // =ALEKSI - TO-SIDES-LIST
 // =============================================================================
 
-@import "SassyLists";
 @import "aleksi/general/const";
 @import "aleksi/general/throw";
 @import "aleksi/general/is-of-type";
 @import "aleksi/const/css/layout-sides";
 @import "aleksi/lists/contained-in";
+@import "aleksi/lists/some";
 @import "aleksi/sides/reduce-sides";
 
 // =sides-map-to-list( $map[, $reduce ])
@@ -46,7 +46,7 @@
       @return throw-error('sides-map-to-sides-list():: $map must be a map. Was #{inspect($map)}.');
     }
 
-    @if not sl-some(map-keys($map), 'contained-in', const('CSS_LAYOUT_SIDES')) {
+    @if not some(map-keys($map), 'contained-in', const('CSS_LAYOUT_SIDES')) {
       @return throw-warning('sides-map-to-sides-list():: $map does not contain any CSS side, value pair.');
     }
 
