--- a/stylesheets/aleksi/lists/_every.scss
+++ b/stylesheets/aleksi/lists/_every.scss
@@ -48,6 +48,10 @@
 
   // run test on single value
   $test-args: arglist-prepend($args, $list);
+  @if type-of($test) == 'string' {
+    $test: get-function($test);
+  }
+
   @return call($test, $test-args...);
 }
 
@@ -80,11 +84,16 @@
     @return throw-error('list-every(): can\'t find test function #{inspect($test)}');
   }
 
+  @if type-of($test) == 'string' {
+    $test: get-function($test);
+  }
+
   // run test on all items in the list
   @each $item in $list
   {
     // return false as soon as one item does not pass given test
     $test-args: arglist-prepend($args, $item);
+
     @if not call($test, $test-args...) {
       @return false;
     }
