--- a/stylesheets/aleksi/lists/_slice.scss
+++ b/stylesheets/aleksi/lists/_slice.scss
@@ -7,6 +7,7 @@
 //// @author [Hugo Giraudel](http://hugogiraudel.com)
 
 @import "aleksi/general/throw";
+@import "aleksi/lists/is-list";
 
 // =slice( $list, $start[, $end ])
 // -----------------------------------------------------------------------------
@@ -27,7 +28,7 @@
     @return ();
   }
 
-  @if type-of($list) != 'list' {
+  @if not is-list($list) {
     @return throw-error('slice(): `$list` must be a list – was `#{inspect($list)}`');
   }
 
