--- a/stylesheets/aleksi/maps/_map-extend-deep.scss
+++ b/stylesheets/aleksi/maps/_map-extend-deep.scss
@@ -5,9 +5,9 @@
 //// @group aleksi-maps
 //// @author [Yoannis Jamar](http://yoannis.me)
 
-@import "SassyLists";
 @import "aleksi/general/throw";
 @import "aleksi/maps/map-merge-deep";
+@import "aleksi/lists/slice";
 
 // =map-extend-deep( $maps... )
 // -----------------------------------------------------------------------------
@@ -21,7 +21,7 @@
 
   $res: nth($maps, 1);
 
-  @each $map in sl-slice($maps, 2) {
+  @each $map in slice($maps, 2) {
     $res: map-merge-deep($res, $map);
   }
 
