--- a/stylesheets/aleksi/maps/_map-filter-values.scss
+++ b/stylesheets/aleksi/maps/_map-filter-values.scss
@@ -38,9 +38,14 @@
 
   $res: ();
 
+  @if type-of($test) == 'string' {
+    $test: get-function($test);
+  }
+
   @each $key, $val in $map
   {
     $test-args: arglist-prepend($args, $val);
+
     @if call($test, $test-args...) {
       $res: map-merge($res, ($key: $val));
     }
