--- a/stylesheets/aleksi/math/_add.scss
+++ b/stylesheets/aleksi/math/_add.scss
@@ -4,9 +4,10 @@
 //// @group aleksi-math
 //// @author [Yoannis Jamar](http://yoannis.me)
 
-@import "SassyLists";
 @import "aleksi/general/throw";
 @import "aleksi/general/is-of-type";
+@import "aleksi/lists/every";
+@import "aleksi/lists/slice";
 
 // =add( $terms... )
 // -----------------------------------------------------------------------------
@@ -35,7 +36,7 @@
 
 @function add( $terms... )
 {
-  @if not sl-every($terms, 'is-of-type', 'number') {
+  @if not every($terms, 'is-of-type', 'number') {
     @return throw-warning('add():: all $terms must be numbers — returning null.');
   }
 
@@ -45,7 +46,7 @@
 
   $sum: nth($terms, 1);
 
-  @each $term in sl-slice($terms, 2) {
+  @each $term in slice($terms, 2) {
     $sum: $sum + $term;
   }
 
