--- a/stylesheets/aleksi/sides/_side-value.scss
+++ b/stylesheets/aleksi/sides/_side-value.scss
@@ -2,10 +2,10 @@
 // =ALEKSI - SIDES-LIST
 // =============================================================================
 
-@import "SassyLists";
 @import "aleksi/general/const";
 @import "aleksi/const/css/layout-sides";
 @import "aleksi/general/throw";
+@import "aleksi/lists/contains";
 @import "aleksi/maps/is-map";
 
 // =get-side-value( $list, $side )
@@ -37,7 +37,7 @@
 
 @function get-side-value( $list, $side )
 {
-  @if type-of($side) != string or not sl-contain(const('CSS_LAYOUT_SIDES'), $side) {
+  @if type-of($side) != string or not contains(const('CSS_LAYOUT_SIDES'), $side) {
     @return throw-error("get-side-value():: $side must be either 'top', 'right', 'bottom' or 'left'. Was #{inspect($side)}.");
   }
 
